# aria-bridge

./: .gitignore  AGENTS.md  README.md  demo-fixed.js  package.json  quickstart.md  tsconfig.json  tsup.config.ts
.code/: aria-bridge.json
.github/workflows/: lang-parity-php-swift.yml  npm-release.yml  sdk-smoke.yml
demo/: control-roundtrip.js  node-demo.js  pageview-demo.js  react-native-example.tsx  server.js  test-host-flow.js  test-live.html  test-singleton-lock.js  test-subscription-flow.js  web-demo.html  web-full-demo.html  workspace-bridge-demo.js
docs/: client-api-spec.md  clients.md  mcp.md  release-checklist.md  roblox.md  subscriptions.md  usage.md
docs/clients/: README.md  go.md  java.md  parity-report.md  php.md  python.md  ruby.md  rust.md  status-gaps.md  status.md  swift.md
docs/protocol/: README.md  testing.md
go/: README.md  go.mod
go/ariabridge/: client.go  (+1 more)
java/: README.md  pom.xml
lua/: AriaBridge.lua
php/: README.md  composer.json  phpunit.xml.dist
protocol/: schema.json
python/: pyproject.toml  requirements.txt
python/aria_bridge/: __init__.py  client.py
python/examples/: basic_usage.py
python/tests/: protocol_host.py  test_client.py
ruby/: Gemfile  README.md  aria_bridge.gemspec
rust/: Cargo.toml  README.md
rust/examples/: basic.rs
rust/src/: lib.rs
rust/tests/: parity.rs  smoke.rs
src/: browser.ts  client.ts  constants.ts  host-utils.ts  index.ts  platform.ts  throttle.ts  types.ts  websocket.ts
swift/: Package.swift  README.md
tools/: copy-lua-client.js  protocol-test-server.js  wait-for-port.js
(+50 files in other folders)
