[package]
name = "aria-bridge-client"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
homepage = "https://github.com/shaneholloman/aria-bridge"
repository = "https://github.com/shaneholloman/aria-bridge"
description = "Minimal Rust client for Aria Bridge (protocol v2)"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
rand = "0.8"
